--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "overworld_demo_typegame"
 description = "A typing game demo using the Overworld library."
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
 authors = [
@@ -17,5 +17,5 @@ publish = true
 
 [dependencies]
 iced = "0.10.0"
-overworld = { version = "0.2.2", features = [] }
+overworld = { version = "0.4.2" }
 wikipedia = "0.3.4"
