--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ publish = true
 [dependencies]
 iced = "0.10.0"
 overworld = { version = "0.4.2" }
-wikipedia = "0.3.4"
+wikipedia_liefland = "0.4.0"
